Creating 4.2 branch to integrate / test HTML5 canvas
git-svn-id: svn://svn.code.sf.net/p/phpvirtualbox/code/branches/4.2-canvas@448 e69283e8-5d15-45ef-a3ba-0bcb5882bed8

--- a/css/jquery.contextMenu.css
+++ b/css/jquery.contextMenu.css
@@ -2,7 +2,7 @@
 .contextMenu {
 	position: absolute;
 	z-index: 9999999;
-	border: solid 1px #CCC;
+	border: 1px solid #CCC;
 	padding: 0px;
 	margin: 0px;
 	display: none;
@@ -11,14 +11,15 @@
 }
 
 ul.contextMenu {
-	background: #e9e9e9;
+	/* From #ffffff to #d9d9d9 */
+	background-color: #e9e9e9;
 	background: -webkit-gradient(linear, left top, right top, from(#ffffff), to(#d9d9d9)); /* for webkit browsers */
 	background: -moz-linear-gradient(left,  #ffffff, #d9d9d9); /* for firefox 3.6+ */
 	background: -o-linear-gradient(left,  #ffffff, #d9d9d9);
-	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1, startColorstr='#ffffff', endColorstr='#d9d9d9'); /* for IE */	
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1, startColorstr='#ffffff', endColorstr='#d9d9d9'); /* for IE */
 }
 
-.contextMenu LI {
+ul.contextMenu li {
 	list-style: none;
 	padding: 0px;
 	margin: 0px;
